--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
+
 body {
-  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+}
+
+h1 {
+  font-weight: 700;
+  margin: 30px 0 40px 0;
+}
+
+button, h3, a {
+  font-weight: 500;
+}
+
+.actions {
+  margin: 50px 0;
 }
 
 .button {
@@ -15,7 +31,6 @@ body {
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
-  font-family: "RM Neue", sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
